# ddpg-trucktrailer

./: .gitignore  README.md  main.py  pyproject.toml  test.py
DDPG/: DDPG_agent.py  best_back.pth  best_no_back.pth  best_smooth.pth  dd.py  diff_final_reward_viz.py  epic.py  episode_player.py  episode_playerv2.py  episode_replay_collector.py  episode_replay_collectorv2.py  exp_gen.py  heatmap.py  heatmap1.py  hh.py  losslandscape.py  multi_training_state_plotter.py  networks.py  npc_solver.py  pareto_analysis.py  saliency.py  seed_utils.py  test.py  train.py  train_traj_hist_viz.py  trainv2.py  viz_how_agent_learn.py  viz_reward.py
DDPG/episode_replays/: episode_0.pkl  episode_0_reward_1204.pkl  episode_1.pkl  episode_10.pkl  episode_100.pkl  episode_1000_reward_-435.pkl  episode_1001_reward_-442.pkl  episode_1002_reward_-451.pkl  episode_1003_reward_-419.pkl  episode_1004_reward_-463.pkl  episode_1005_reward_-420.pkl  episode_1006_reward_-399.pkl  episode_1007_reward_-457.pkl  episode_1008_reward_-458.pkl  episode_1009_reward_-420.pkl  episode_100_reward_-400.pkl  episode_101.pkl  episode_1010_reward_-400.pkl  episode_1011_reward_-428.pkl  episode_1012_reward_-399.pkl  episode_1013_reward_-459.pkl  episode_1014_reward_-468.pkl  episode_1015_reward_-415.pkl  episode_1016_reward_-400.pkl  episode_1017_reward_-435.pkl  episode_1018_reward_-420.pkl  episode_1019_reward_-456.pkl  (+5280 more)
ploting_utils/: plot.py  plot_learning_curve.py  plot_path.py  test.py
truck_trailer_sim/: main.py  reward_function.py  reward_functionv1.py  reward_functionv2.py  run.py  simv1.py  simv2.py
(+17332 files in other folders)
